--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -15,3 +15,39 @@
  */
 @import "bootstrap-sprockets"
 @import "bootstrap"
+
+body
+  // padding-top for fixed nav bar
+  padding-top: 70px
+  // Margin bottom for fixed footer
+  margin-bottom: 90px
+
+
+//
+.table
+  th.fit, td.fit
+    white-space: nowrap
+    width: 1%
+
+//
+select.form-control
+  width: auto
+  display: inline
+
+html
+  position: relative
+  min-height: 100%
+
+.footer
+  position: absolute
+  bottom: 0
+  width: 100%
+  // Set the fixed height of the footer here
+  height: 50px
+  // line-height = height for single line vertically centered
+  line-height: 50px
+  background-color: #f5f5f5
+
+// form error formatting
+.field_with_errors
+  @extend .has-error
