--- a/app/views/pools/index.html.erb
+++ b/app/views/pools/index.html.erb
@@ -1,31 +1,38 @@
-<p id="notice"><%= notice %></p>
+<div class="container">
+  <% if notice %>
+    <div id="notice" class="alert alert-success alert-dismissible">
+      <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+      <%= notice %>
+    </div>
+  <% end %>
+</div>
 
-<h1>Listing Pools</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Location</th>
-      <th>Size</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @pools.each do |pool| %>
+<div class="container">
+  <table class="table table-stripped">
+    <thead>
       <tr>
-        <td><%= pool.name %></td>
-        <td><%= pool.location %></td>
-        <td><%= pool.size %></td>
-        <td><%= link_to 'Show', pool %></td>
-        <td><%= link_to 'Edit', edit_pool_path(pool) %></td>
-        <td><%= link_to 'Destroy', pool, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <th>Name</th>
+        <th>Location</th>
+        <th>Size (m)</th>
+        <th colspan="3" class="fit"></th>
       </tr>
-    <% end %>
-  </tbody>
-</table>
+    </thead>
 
-<br>
+    <tbody>
+      <% @pools.each do |pool| %>
+        <tr>
+          <td><%= pool.name %></td>
+          <td><%= pool.location %></td>
+          <td><%= pool.size %></td>
+          <td class="fit"><%= link_to 'Show', pool %></td>
+          <td class="fit"><%= link_to 'Edit', edit_pool_path(pool) %></td>
+          <td class="fit"><%= link_to 'Destroy', pool, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
 
-<%= link_to 'New Pool', new_pool_path %>
+  <br>
+
+  <%= link_to 'New Pool', new_pool_path, class: "btn btn-primary" %>
+</div>
