--- a/app/views/swims/index.html.erb
+++ b/app/views/swims/index.html.erb
@@ -1,31 +1,38 @@
-<p id="notice"><%= notice %></p>
+<div class="container">
+  <% if notice %>
+    <div id="notice" class="alert alert-success alert-dismissible">
+      <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+      <%= notice %>
+    </div>
+  <% end %>
+</div>
 
-<h1>Listing Swims</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>Start</th>
-      <th>Duration</th>
-      <th>Distance</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @swims.each do |swim| %>
+<div class="container">
+  <table class="table table-stripped">
+    <thead>
       <tr>
-        <td><%= swim.start %></td>
-        <td><%= swim.duration %></td>
-        <td><%= swim.distance %></td>
-        <td><%= link_to 'Show', swim %></td>
-        <td><%= link_to 'Edit', edit_swim_path(swim) %></td>
-        <td><%= link_to 'Destroy', swim, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <th>Start</th>
+        <th>Duration</th>
+        <th>Distance (m)</th>
+        <th colspan="3" class="fit"></th>
       </tr>
-    <% end %>
-  </tbody>
-</table>
+    </thead>
 
-<br>
+    <tbody>
+      <% @swims.each do |swim| %>
+        <tr>
+          <td><%= swim.start %></td>
+          <td><%= swim.duration %></td>
+          <td><%= swim.distance %></td>
+          <td class="fit"><%= link_to 'Show', swim %></td>
+          <td class="fit"><%= link_to 'Edit', edit_swim_path(swim) %></td>
+          <td class="fit"><%= link_to 'Destroy', swim, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
 
-<%= link_to 'New Swim', new_swim_path %>
+  <br>
+
+  <%= link_to 'New Swim', new_swim_path, class: "btn btn-primary" %>
+</div>
