rename swims column start -> when & pools column size -> length

--- a/app/views/pools/_form.html.erb
+++ b/app/views/pools/_form.html.erb
@@ -20,8 +20,8 @@
     <%= f.text_field :location %>
   </div>
   <div class="field">
-    <%= f.label :size %><br>
-    <%= f.number_field :size %>
+    <%= f.label :length %><br>
+    <%= f.number_field :length %>
   </div>
   <div class="actions">
     <%= f.submit %>
