--- a/app/views/pools/show.html.erb
+++ b/app/views/pools/show.html.erb
@@ -11,8 +11,8 @@
 </p>
 
 <p>
-  <strong>Size:</strong>
-  <%= @pool.size %>
+  <strong>Length (m):</strong>
+  <%= @pool.length %>
 </p>
 
 <%= link_to 'Edit', edit_pool_path(@pool) %> |
