--- a/app/views/swims/show.html.erb
+++ b/app/views/swims/show.html.erb
@@ -1,8 +1,8 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <strong>Start:</strong>
-  <%= @swim.start %>
+  <strong>When:</strong>
+  <%= @swim.when %>
 </p>
 
 <p>
