--- a/app/views/pools/index.html.erb
+++ b/app/views/pools/index.html.erb
@@ -13,7 +13,7 @@
       <tr>
         <th>Name</th>
         <th>Location</th>
-        <th>Size (m)</th>
+        <th>Length (m)</th>
         <th colspan="3" class="fit"></th>
       </tr>
     </thead>
@@ -23,7 +23,7 @@
         <tr>
           <td><%= pool.name %></td>
           <td><%= pool.location %></td>
-          <td><%= pool.size %></td>
+          <td><%= pool.length %></td>
           <td class="fit"><%= link_to 'Show', pool %></td>
           <td class="fit"><%= link_to 'Edit', edit_pool_path(pool) %></td>
           <td class="fit"><%= link_to 'Destroy', pool, method: :delete, data: { confirm: 'Are you sure?' } %></td>
