--- a/app/views/swims/_form.html.erb
+++ b/app/views/swims/_form.html.erb
@@ -12,8 +12,8 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :start %><br>
-    <%= f.datetime_select :start %>
+    <%= f.label :when %><br>
+    <%= f.datetime_select :when %>
   </div>
   <div class="field">
     <%= f.label :duration %><br>
