add dashboard controller and views

--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -18,9 +18,9 @@
     <div id="navbar" class="navbar-collapse collapse">
 
       <ul class="nav navbar-nav">
-        <!-- <li class="<%= is_active('/') %>">
-          <%= link_to 'Root', '/' %>
-        </li> -->
+        <li class="<%= is_active('/') %>">
+          <%= link_to 'Dashboard', '/' %>
+        </li>
 
         <li class="<%= is_active(swims_path) %>">
           <%= link_to 'Swims', swims_path %>
