--- a/app/views/swims/edit.html.erb
+++ b/app/views/swims/edit.html.erb
@@ -1,6 +1,7 @@
-<h1>Editing Swim</h1>
+<div class="container">
+  <h1>Editing Swim - <%= h @swim.id %></h1>
+  <br />
 
-<%= render 'form' %>
+  <%= render 'form' %>
 
-<%= link_to 'Show', @swim %> |
-<%= link_to 'Back', swims_path %>
+</div>
