--- a/app/views/pools/_form.html.erb
+++ b/app/views/pools/_form.html.erb
@@ -1,29 +1,45 @@
-<%= form_for(@pool) do |f| %>
-  <% if @pool.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@pool.errors.count, "error") %> prohibited this pool from being saved:</h2>
+<% if @pool.errors.any? %>
+<div id="error_explanation" class="alert alert-danger alert-dismissible">
+  <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+    <strong><%= pluralize(@pool.errors.count, "error") %> prohibited this pool from being saved:</strong>
 
-      <ul>
-      <% @pool.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
+    <ul>
+    <% @pool.errors.full_messages.each do |message| %>
+      <li><%= message %></li>
+    <% end %>
+    </ul>
+  </div>
+<% end %>
+
+<!-- horizontal form -->
+<%= form_for @pool, :html => {:class => "form-horizontal"} do |f| %>
+
+  <div class="form-group">
+      <%= f.label :name, class: "col-xs-12 col-sm-2 control-label" %>
+    <div class="col-xs-10 col-sm-4">
+      <%= f.text_field :name, class: "form-control" %>
     </div>
-  <% end %>
+  </div>
 
-  <div class="field">
-    <%= f.label :name %><br>
-    <%= f.text_field :name %>
+  <div class="form-group">
+    <%= f.label :location, class: "col-xs-12 col-sm-2 control-label" %>
+    <div class="col-xs-10 col-sm-4">
+      <%= f.text_field :location, class: "form-control" %>
+    </div>
   </div>
-  <div class="field">
-    <%= f.label :location %><br>
-    <%= f.text_field :location %>
+
+  <div class="form-group">
+    <%= f.label :length, class: "col-xs-12 col-sm-2 control-label" %>
+    <div class="col-xs-10 col-sm-4">
+      <%= f.number_field :length, class: "form-control" %>
+    </div>
   </div>
-  <div class="field">
-    <%= f.label :length %><br>
-    <%= f.number_field :length %>
+
+  <div class="actions form-group">
+    <div class="col-xs-12 col-sm-10 col-sm-offset-2">
+      <%= f.submit "Submit", class: "btn btn-success" %>
+      <%= link_to "Back", :back, class: "btn btn-primary" %>
+    </div>
   </div>
-  <div class="actions">
-    <%= f.submit %>
-  </div>
+
 <% end %>
