--- a/app/views/pools/edit.html.erb
+++ b/app/views/pools/edit.html.erb
@@ -1,6 +1,7 @@
-<h1>Editing Pool</h1>
+<div class="container">
+  <h1>Editing Pool - <%= h @pool.id %></h1>
+  <br />
 
-<%= render 'form' %>
+  <%= render 'form' %>
 
-<%= link_to 'Show', @pool %> |
-<%= link_to 'Back', pools_path %>
+</div>
