--- a/app/views/pools/new.html.erb
+++ b/app/views/pools/new.html.erb
@@ -1,5 +1,7 @@
-<h1>New Pool</h1>
+<div class="container">
+  <h1>New Pool</h1>
+  <br />
 
-<%= render 'form' %>
+  <%= render 'form' %>
 
-<%= link_to 'Back', pools_path %>
+</div>
