--- a/app/views/swims/new.html.erb
+++ b/app/views/swims/new.html.erb
@@ -1,5 +1,7 @@
-<h1>New Swim</h1>
+<div class="container">
+  <h1>New Swim</h1>
+  <br />
 
-<%= render 'form' %>
+  <%= render 'form' %>
 
-<%= link_to 'Back', swims_path %>
+</div>
