fix swim->pool relationshsip, add migration &  update swim views (index & show)

--- a/app/views/swims/show.html.erb
+++ b/app/views/swims/show.html.erb
@@ -12,6 +12,8 @@
   <dl class="dl-horizontal">
     <dt>When:</dt>
     <dd><%= @swim.when %></dd>
+    <dt>Where:</dt>
+    <dd><%= @swim.pool.name %></dd>
     <dt>Duration:</dt>
     <dd><%= @swim.duration %></dd>
     <dt>Distance (m):</dt>
