--- a/app/views/swims/index.html.erb
+++ b/app/views/swims/index.html.erb
@@ -12,6 +12,7 @@
     <thead>
       <tr>
         <th>When</th>
+        <th>Where</th>
         <th>Duration</th>
         <th>Distance (m)</th>
         <th colspan="3" class="fit"></th>
@@ -22,6 +23,7 @@
       <% @swims.each do |swim| %>
         <tr>
           <td><%= swim.when %></td>
+          <td><%= swim.pool.name %></td>
           <td><%= swim.duration %></td>
           <td><%= swim.distance %></td>
           <td class="fit"><%= link_to 'Show', swim, class: "btn btn-primary" %></td>
