--- a/app/views/swims/_form.html.erb
+++ b/app/views/swims/_form.html.erb
@@ -22,6 +22,13 @@
   </div>
 
   <div class="form-group">
+      <%= f.label :pool_id, class: "col-xs-12 col-sm-2 control-label" %>
+    <div class="col-xs-10 col-sm-4">
+      <%= f.collection_select :pool_id, Pool.order(:name), :id, :name, {prompt: true}, {class: "form-control"} %>
+    </div>
+  </div>
+
+  <div class="form-group">
     <%= f.label :duration, class: "col-xs-12 col-sm-2 control-label" %>
     <div class="col-xs-10 col-sm-4">
       <%= f.text_field :duration, class: "form-control" %>
