--- a/app/views/swims/_form.html.erb
+++ b/app/views/swims/_form.html.erb
@@ -31,14 +31,17 @@
   <div class="form-group">
     <%= f.label :duration, class: "col-xs-12 col-sm-2 control-label" %>
     <div class="col-xs-10 col-sm-4">
-      <%= f.text_field :duration, class: "form-control" %>
+      <%= f.text_field :duration, placeholder: "hh:mm:ss", class: "form-control" %>
     </div>
   </div>
 
   <div class="form-group">
     <%= f.label :distance, class: "col-xs-12 col-sm-2 control-label" %>
     <div class="col-xs-10 col-sm-4">
-      <%= f.number_field :distance, class: "form-control" %>
+      <div class="input-group">
+        <%= f.number_field :distance, class: "form-control" %>
+        <span class="input-group-addon">m</span>
+      </div>
     </div>
   </div>
 
