add a virtual attribute for a string representation of swim duration

--- a/app/views/swims/_form.html.erb
+++ b/app/views/swims/_form.html.erb
@@ -29,9 +29,9 @@
   </div>
 
   <div class="form-group">
-    <%= f.label :duration, class: "col-xs-12 col-sm-2 control-label" %>
+    <%= f.label :duration_string, class: "col-xs-12 col-sm-2 control-label" %>
     <div class="col-xs-10 col-sm-4">
-      <%= f.text_field :duration, placeholder: "hh:mm:ss", class: "form-control" %>
+      <%= f.text_field :duration_string, placeholder: "hh:mm:ss", class: "form-control" %>
     </div>
   </div>
 
