--- a/app/views/swims/index.html.erb
+++ b/app/views/swims/index.html.erb
@@ -24,7 +24,7 @@
         <tr>
           <td><%= swim.when %></td>
           <td><%= swim.pool.name %></td>
-          <td><%= swim.duration %></td>
+          <td><%= swim.duration_string %></td>
           <td><%= swim.distance %></td>
           <td class="fit"><%= link_to 'Show', swim, class: "btn btn-primary" %></td>
           <td class="fit"><%= link_to 'Edit', edit_swim_path(swim), class: "btn btn-primary" %></td>
