--- a/app/views/swims/show.html.erb
+++ b/app/views/swims/show.html.erb
@@ -15,7 +15,7 @@
     <dt>Where:</dt>
     <dd><%= @swim.pool.name %></dd>
     <dt>Duration:</dt>
-    <dd><%= @swim.duration %></dd>
+    <dd><%= @swim.duration_string %></dd>
     <dt>Distance (m):</dt>
     <dd><%= @swim.distance %></dd>
   </dl>
