add avg speed to swims model & update swims and pools views

--- a/app/views/pools/index.html.erb
+++ b/app/views/pools/index.html.erb
@@ -13,7 +13,7 @@
       <tr>
         <th>Name</th>
         <th>Location</th>
-        <th>Length (m)</th>
+        <th>Length</th>
         <th colspan="3" class="fit"></th>
       </tr>
     </thead>
@@ -23,7 +23,7 @@
         <tr>
           <td><%= pool.name %></td>
           <td><%= pool.location %></td>
-          <td><%= pool.length %></td>
+          <td><%= pool.length %>m</td>
           <td class="fit"><%= link_to 'Show', pool, class: "btn btn-primary" %></td>
           <td class="fit"><%= link_to 'Edit', edit_pool_path(pool), class: "btn btn-primary" %></td>
           <td class="fit"><%= link_to 'Destroy', pool, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-danger" %></td>
