--- a/app/views/pools/show.html.erb
+++ b/app/views/pools/show.html.erb
@@ -14,8 +14,8 @@
     <dd><%= @pool.name %></dd>
     <dt>Location:</dt>
     <dd><%= @pool.location %></dd>
-    <dt>Length (m):</dt>
-    <dd><%= @pool.length %></dd>
+    <dt>Length:</dt>
+    <dd><%= @pool.length %>m</dd>
   </dl>
   <hr />
 
