--- a/app/views/swims/show.html.erb
+++ b/app/views/swims/show.html.erb
@@ -16,8 +16,10 @@
     <dd><%= @swim.pool.name %></dd>
     <dt>Duration:</dt>
     <dd><%= @swim.duration_string %></dd>
-    <dt>Distance (m):</dt>
-    <dd><%= @swim.distance %></dd>
+    <dt>Distance:</dt>
+    <dd><%= @swim.distance %>m</dd>
+    <dt>Avg Speed:</dt>
+    <dd><%= @swim.avg_speed %>m/s</dd>
   </dl>
   <hr />
 
