--- a/app/views/swims/index.html.erb
+++ b/app/views/swims/index.html.erb
@@ -14,7 +14,8 @@
         <th>When</th>
         <th>Where</th>
         <th>Duration</th>
-        <th>Distance (m)</th>
+        <th>Distance</th>
+        <th>Avg Speed</th>
         <th colspan="3" class="fit"></th>
       </tr>
     </thead>
@@ -25,7 +26,8 @@
           <td><%= swim.when %></td>
           <td><%= swim.pool.name %></td>
           <td><%= swim.duration_string %></td>
-          <td><%= swim.distance %></td>
+          <td><%= swim.distance %>m</td>
+          <td><%= swim.avg_speed %>m/s</td>
           <td class="fit"><%= link_to 'Show', swim, class: "btn btn-primary" %></td>
           <td class="fit"><%= link_to 'Edit', edit_swim_path(swim), class: "btn btn-primary" %></td>
           <td class="fit"><%= link_to 'Destroy', swim, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-danger" %></td>
