--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -3,10 +3,7 @@
   <h1>All swims</h1>
   <%= line_chart @swims.map { |swim| [swim.when, swim.avg_speed]  }.to_h, id: "avergage-speed", xtitle: "Date", ytitle: "Average Speed (m/s)" %>
 
-  <!-- average speed vs day with series for pool length -->
+  <!-- average speed vs day with series for each pool length -->
   <h1>Swims by pool length</h1>
-  <%= line_chart [
-    {name: "25m", data: @swims25.map { |swim| [swim.when, swim.avg_speed]  }.to_h},
-    {name: "50m", data: @swims50.map { |swim| [swim.when, swim.avg_speed]  }.to_h}
-    ], id: "avergage-speed2", xtitle: "Date", ytitle: "Average Speed (m/s)" %>
+  <%= line_chart @swimsbypool, id: "avergage-speed-by-pool", xtitle: "Date", ytitle: "Average Speed (m/s)" %>
 </div>
