--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -46,7 +46,7 @@ html
   height: 50px
   // line-height = height for single line vertically centered
   line-height: 50px
-  background-color: #f5f5f5
+  background-color: $navbar-default-bg
 
 // form error formatting
 .field_with_errors
